# ninjax

./: .gitignore  README.md  setup.cfg  setup.py
src/ninjax/: analysis.py  default_config.ini  likelihood.py  parser.py  pipe.py  pipe_utils.py  prior.py  transforms.py
src/ninjax.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/ninjax/pipes/: EOSPipe.py  default_config.ini  gw_pipe.py  ninjax_pipe.py  pipe_utils.py
