[metadata]
name = ninjax
version = 0.0.1
author = Thibeau Wouters
author_email = thibeauwouters@gmail.com
url = https://github.com/thibeauwouters/ninjax
description = Nitro-speed inference of the nuclear equation of state with jax
long_description = file: README.md
long_description_content_type = text/markdown
keywords = sampling, inference, astrophysics, kilonovae, gamma-ray bursts
license = MIT

[options]
packages_dir=
    =src
packages = find:
install_requires =
    jax>=0.4.24
    jaxlib>=0.4.24
    numpy<2.0.0
    pandas<2.0.0
    jaxtyping
    beartype
    tqdm
    scipy<=1.14.0
    ml_collections
    astropy
    sncosmo
    flowMC
    
python_requires =  >=3.10

[options.packages.find]
where=src